[package]
name = "cirilica"
version = "0.10.0"
authors = ["topce <slobodan.filipovic@gmail.com>"]
edition = "2018"
description = "Simple library to traslate from serbian latin to serbian cyrillic "
keywords = ["serbian", "latin", "cyrillic", "latinica", "cirilica"]
license = "MIT"
documentation = "https://github.com/topce/cirilica"
homepage = "https://github.com/topce/cirilica"
repository = "https://github.com/topce/cirilica"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
